add support for running external programs with arguments